@@ -25,7 +25,8 @@ class TestLabelIncludes < Test::Unit::TestCase
       :release_rels => true,
       :track_rels => true,
       :label_rels => true,
-      :url_rels => true
+      :url_rels => true,
+      :tags => true
       )
     result_string = includes.to_s
     assert_equal 'inc=', result_string[0..3]
@@ -37,6 +38,7 @@ class TestLabelIncludes < Test::Unit::TestCase
     assert result_array.include?('track-rels')
     assert result_array.include?('label-rels')
     assert result_array.include?('url-rels')
+    assert result_array.include?('tags')
   end
   
   def test_empty_includes
@@ -46,7 +48,8 @@ class TestLabelIncludes < Test::Unit::TestCase
       :release_rels => false,
       :track_rels => false,
       :label_rels => false,
-      :url_rels => false
+      :url_rels => false,
+      :tags => false
       )
     assert_equal '', includes.to_s
   
